# emtf-tree

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
emtf_tree/: __init__.py  defaults.py  io.py  logger.py  memory.py  registry.py  tree.py  treebuffer.py  treechain.py  treefilter.py  treeobject.py  treetypes.py
tests/: tree_test.py  treechain_test.py
