[metadata]
name = emtf-tree
version = 0.0.2
author = Jia Fu Low
author_email = jia.fu.low@cern.ch
license = BSD 3-Clause License
license_file = LICENSE
description = Useful tools for managing ROOT trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jiafulow/emtf-tree
project_urls =
    Bug Tracker = https://github.com/jiafulow/emtf-tree/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
# E265 block comment should start with '# '
# F401 `module` imported but unused
extend-ignore = E265, F401
max-line-length = 88
count = True
statistics = True

[isort]
profile = black
